<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowToPlay">

    <androidx.cardview.widget.CardView
        android:layout_width="664dp"
        android:layout_height="296dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:alpha="1"
        android:animateLayoutChanges="false"
        android:elevation="500dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:contentPadding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient"
            android:contentDescription="@string/bgImage"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/info_text_story"
            android:layout_width="636dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Info_Card_Text_Story"
            android:textColor="#90CAF9" />

        <TextView
            android:id="@+id/info_text_control"
            android:layout_width="636dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:text="@string/Info_Card_Text_Controls"
            android:textColor="#90CAF9"
            android:translationY="50dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="Start Game"
            android:translationX="250dp"
            android:translationY="150dp" />
    </androidx.cardview.widget.CardView>


    <!--<com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MobileAndGameDevicesICA.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MobileAndGameDevicesICA.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_how_to_play" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>